styles.css
:root {
    --white: #f4f4f4;
    --off-white: #ccd9d8;
    --black: #181818;
    --half-invis: #00000054;
    --half-invis-light: #43434354;
    --invis: #00000000;
    --secondarl: #f24a44;
    --secondary: #e82929;
    --secondark: #db1515;
    --thirdarl: #efb446;
    --thirdary: #ffb916;
    --thirdark: #d1830e;
} 

* {
    font-family: "Rubik", serif;    
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;

    /*Remove scrollbars*/
    overflow-y: visible;
    scrollbar-width: none;
    -ms-overflow-style: none; /* IE/Edge */

    margin: 0;
    padding: 0;

    font-size: 1rem;
    
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: transparent;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    touch-action: manipulation;
    user-select: none;
}

html {
    font-size: clamp(14px, 4vw, 30px);
}

body {
    color: var(--black);
    background-color: var(--thirdark);
    opacity: 0;
    transition: opacity .4s;
}

body.loaded {
    opacity: 1;
}

.white {
    color: var(--white);
}

.branded-bg {
    z-index: -2;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-image: url(assets/images/branding/logo.jpg);
    background-position: center top; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.alt-branded-bg {
    z-index: -2;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-image: url(assets/images/branding/liverreal-bg.png);
    background-position: center center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.branded-bg-overlay {
    z-index: -1;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), linear-gradient(var(--thirdark), var(--invis) 50%);
    background-position: center top; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

*::-webkit-scrollbar {
    display: none;
}

.content {
    margin: auto;
    max-width: 1000px;
}
h1 {
    font-size: 2.5rem;
    margin: 1rem;
    text-align: center;
      font-family: "Arsenal SC", sans-serif;
  font-weight: 500;
  font-style: normal;
}

h2 {
    font-size: 1.5rem;
    margin: 1rem;
    font-weight: 200;
    text-align: center;
}

p {
    font-size: 1.5rem;
    margin: 1rem;
}

p.notice {
    color: gray;
    font-size: 0.75rem;
}

p#nyheter {
    padding: 0;
    margin: 0;
    font-size: 0.5rem;
}

a {
    color: var(--white);
    text-decoration: none;
}

.hyperlink {
    font-size: 0.5rem;
    color: rgb(59, 133, 237);
    padding: 0;
}

@keyframes colorAnimation {
    0% { background-position: 0% 30%; }
    50% { background-position: 0% 50%; }
    100% { background-position: 0% 30%; }
}

.button-test {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    will-change: transform;
    margin: 0.5rem;
    padding: 1rem 1rem;
    text-shadow: 1.5px 1.5px 0px var(--thirdark), 0px 1.5px 0px var(--thirdark), -1.5px 1.5px 0px var(--thirdark);
    background-image: linear-gradient(var(--invis), var(--secondark));
    background-color: var(--secondary);
    transition: background-color 200ms ease-in-out, transform 200ms ease-in-out;
    text-align: center;
    border: 5px solid;
    border-image-slice: 1;
    border-image-source: linear-gradient(to bottom, var(--thirdary), var(--thirdark));
    border-radius: 10px;

    filter: drop-shadow(5px 5px 0px var(--half-invis));
}

.button-test:hover {
    transform: scale(0.99) translateZ(0);
    background-color: var(--secondarl);
}

.button-test:active {
    transform: scale(1.1) translateZ(0);
    z-index: 5;
}

span {
    cursor: pointer;
}

label {
    font-size: 1rem;
}

input {
    font-size: 1rem;
      font-family: "Lilita One", serif;
  font-weight: 400;
  font-style: normal;
}

button {
    font-size: 1rem;
}


table {
    position: relative;
    left: 50%;
    transform: translate(-50%, 0);
    text-align: center;
    border-radius: 25px;
    background-color: var(--half-invis-light);
    backdrop-filter: blur(50px);
    -webkit-backdrop-filter: blur(50px);
    border: 0px solid var(--white);
}

th, td {
    font-size: 1rem;
    padding: 0.5rem 1rem;
}

li {
    margin: 0 0 0 1rem;
    padding: 0.5rem 0rem 0.5rem 60px;
	list-style: none;
	background-image: url(assets/images/branding/liverreal-monoicon.png);
	background-repeat: no-repeat;
	background-position: left center;
	background-size: 1.5rem;
}

li.gold {
    background-image: url(assets/images/branding/liverreal-icon.png);
}

#logo {
    z-index: 3;
    position: fixed;
    top: 0;
    left: 0;
    width: 4rem;
    height: 4rem;
    background-image: url(assets/images/branding/liverreal-icon.png);
    background-size: contain;
}

img {
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    pointer-events: none;
}

.hero-image {
    width: 100%;
    border-radius: 2px;
}

.bg {
    width: 100vw;
    height: 100vh;
    background-image: url(assets/images/wordbg.png);
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: 100% 100%;
    background-color: rgb(240, 240, 240);
}

#chatcontainer {
    background-color: rgba(240, 240, 240, 0.071);
    position: fixed;
    width: 100vw;
    height: 72%;
    top: 21%;
}

#chatarea {
    background-color: white;
    border: 1px solid rgb(227, 227, 227);
    position: fixed;
    transform: translate(-50%, 0);
    left: 49.5%;
    width: 90vw;
    height: 71%;
    overflow-y: scroll;
}

.simple-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
    font-size: 0.5rem;
    text-align: center;
    background-color: var(--black);
    color: var(--white);
}

@media all and (display-mode: fullscreen) {
  .notice {
      display: none;
  }
}
@media screen and (max-width: 750px) {
.simple-grid {
    grid-template-columns: 1fr;
}
}


/*ranks*/
:root {
    --garbage: #956c40;
    --common: #15d100;
    --rare: #d80000;
    --unreal: #00cad8;
    --inmagen: #ffd500;
}

.garbage {
    color: var(--garbage);
    text-shadow: 0 0 5px var(--garbage);
    -webkit-text-stroke: 1px var(--white);
}

.common {
    color: var(--common);
    text-shadow: 0 0 5px var(--common);
    -webkit-text-stroke: 1px var(--white);
}

.rare {
    color: var(--rare);
    text-shadow: 0 0 5px var(--rare);
    -webkit-text-stroke: 1px var(--white);
}

.unreal {
    color: var(--unreal);
    text-shadow: 0 0 5px var(--unreal);
    -webkit-text-stroke: 1px var(--white);
}

.inmagen {
    color: var(--inmagen);
    text-shadow: 0 0 5px var(--inmagen), 1px 0px 3px var(--black);
    -webkit-text-stroke: 1px var(--white);
}

.secondary {
    color: var(--secondary);
    text-shadow: 0 0 5px var(--secondary);
    -webkit-text-stroke: 1px var(--white);
}

.thirdary {
    color: var(--thirdary);
    text-shadow: 0 0 5px var(--thirdary);
    -webkit-text-stroke: 1px var(--white);
}

